8345016: [ASAN] java.c false positive ‘%s’ directive argument is null [-Werror=format-truncation=]